--- a/avans-eet-banaantjes-template-1.21/gradle.properties
+++ b/avans-eet-banaantjes-template-1.21/gradle.properties
@@ -10,8 +10,8 @@ loader_version=0.16.10
 
 # Mod Properties
 mod_version=1.0.0
-maven_group=com.martinus.avans1
-archives_base_name=avans-eet-banaantjes
+maven_group=com.oldmartijntje.tutorialmod
+archives_base_name=tutorialmod
 
 # Dependencies
 fabric_version=0.102.0+1.21
