data generation [ep 11]

--- a/avans-eet-banaantjes-template-1.21/build.gradle
+++ b/avans-eet-banaantjes-template-1.21/build.gradle
@@ -41,6 +41,8 @@ processResources {
 	filesMatching("fabric.mod.json") {
 		expand "version": project.version
 	}
+
+	duplicatesStrategy = DuplicatesStrategy.INCLUDE
 }
 
 tasks.withType(JavaCompile).configureEach {
