Custom Enchantment [ep 30]

--- a/avans-eet-banaantjes-template-1.21/build.gradle
+++ b/avans-eet-banaantjes-template-1.21/build.gradle
@@ -58,6 +58,9 @@ java {
 	sourceCompatibility = JavaVersion.VERSION_21
 	targetCompatibility = JavaVersion.VERSION_21
 }
+tasks.withType(Jar).configureEach {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+}
 
 jar {
 	from("LICENSE") {
